--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,10 @@
     <string name="tesdiq">Təsdiqləmək istədiyinizdən əminsinizmi?</string>
     <string name="l_v_et">Ləğv et</string>
     <string name="t_sdiql">Təsdiqlə</string>
+    <string name="exitDialogTitle">Logout</string>
+    <string name="exitDialogMessage">Are you sure  you want to logout?</string>
+    <string name="exitDialogNegativeBtnTxt">Cancel</string>
+    <string name="exitDialogPositiveBtnTxt">Yes</string>
 
     <string-array name="languages">
         <item>EN</item>
