--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,12 @@
     <string name="exitDialogPositiveBtnTxt">Yes</string>
     <string name="congratulations">Congratulations!</string>
     <string name="dones">You’re Done</string>
+    <string name="irk_tin_ad">Şirkətin adı</string>
+    <string name="m_sul_xs">Məsul şəxs</string>
+    <string name="laq_n_mr_si">Əlaqə nömrəsi</string>
+    <string name="mail">Mail</string>
+    <string name="nvan">Ünvan</string>
+    <string name="sayt">Sayt</string>
 
     <string-array name="languages">
         <item>EN</item>
