--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,17 @@
     <string name="en">EN</string>
     <string name="date">Date:</string>
     <string name="june">JUNE</string>
+    <string name="janury">JANUARY</string>
+    <string name="february">FEBRUARY</string>
+    <string name="march">MARCH</string>
+    <string name="april">APRIL</string>
+    <string name="may">MAY</string>
+    <string name="july">JULY</string>
+    <string name="august">AUGUST</string>
+    <string name="september">SEPTEMBER</string>
+    <string name="october">OCTOBER</string>
+    <string name="november">NOVEMBER</string>
+    <string name="december">DECEMBER</string>
     <string name="digital_media">DIGITAL MEDIA</string>
     <string name="facebook">Facebook</string>
     <string name="todo">TODO</string>
