Add User Fab Button is working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="congratulations">Congratulations!</string>
     <string name="dones">You’re Done</string>
     <string name="irk_tin_ad">Şirkətin adı</string>
+    <string name="passHintInfo">Şifrə</string>
     <string name="m_sul_xs">Məsul şəxs</string>
     <string name="laq_n_mr_si">Əlaqə nömrəsi</string>
     <string name="mail">Mail</string>
