--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="exitDialogNegativeBtnTxt">Cancel</string>
     <string name="exitDialogPositiveBtnTxt">Yes</string>
     <string name="congratulations">Congratulations!</string>
-    <string name="dones">You’re Done</string>
+    <string name="dones">You\'re Done</string>
     <string name="irk_tin_ad">Şirkətin adı</string>
     <string name="passHintInfo">Şifrə</string>
     <string name="m_sul_xs">Məsul şəxs</string>
